# hikari

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
collector/: Dockerfile  pyproject.toml
collector/src/collector/: __init__.py  app.py  config.py  ingest.py  middleware.py  models.py  queries.py  routes.py  storage.py
collector/tests/: conftest.py  test_ingest.py  test_queries.py  test_routes.py
docs/: elenchus-spec.json  engineering-spec.md  spec.md
examples/: python_example.py  sample_trace.json  typescript_example.ts
migrations/: 001_initial_schema.sql  002_continuous_aggregates.sql
sdk/python/: pyproject.toml
sdk/python/src/hikari/: __init__.py  attributes.py  context.py  default_pricing.json  exporter.py  instrumentor.py  pricing.py
sdk/python/src/hikari/providers/: __init__.py  anthropic.py  google.py  openai.py
sdk/python/tests/: conftest.py  test_instrumentor.py  test_pricing.py  test_providers.py
sdk/typescript/: package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: attributes.ts  context.ts  exporter.ts  index.ts  instrumentor.ts  pricing.ts
sdk/typescript/src/__tests__/: instrumentor.test.ts  pricing.test.ts  providers.test.ts
sdk/typescript/src/providers/: anthropic.ts  google.ts  openai.ts
tests/integration/: test_end_to_end.py
