[project]
name = "hikari-collector"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "asyncpg>=0.29",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
    "mypy>=1.5",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/collector"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
